--- a/src/components/CardLaunch.astro
+++ b/src/components/CardLaunch.astro
@@ -11,7 +11,7 @@ const{ success, flightNumber, img, id, details } = Astro.props
 const launchStatus = success ? "Success" : "Failure"
 ---
 <a
-href={`/launch/${id}`}
+href={`/spacex_demo/launch/${id}`}
 class="rounded-lg boder shadow-md bg-gray-800 border-gray-700 hover:scale-105 
 hover:bg-gray-700 hover:border-gray-500 transition flex flex-col"
 >
